--- a/daisyo-day1/styles.css
+++ b/daisyo-day1/styles.css
@@ -10,6 +10,7 @@ body{
 button{
     background:#0078d7;
     color:white;
+    border:none;
     padding:12px24px;
     border-radius:8px;
     cursor:pointer;
